# LabelGenerator

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample.csv  setup.py
label_generator/: cli.py  constants.py  controller.py
scripts/: generate_setup.sh
